--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,11 +29,10 @@ chrono = "0.4.35"
 dashmap = "5.5.3"
 indicatif = "0.17.8"
 prost = "0.12.3"
-fern = { version = "0.6.2", features = ["colored", "date-based"] }
 parking_lot = "0.12.1"
 tokio = { version = "1.36.0", features = ["full"] }
 tokio-stream = { version = "0.1.14", features = ["sync"] }
-tonic = "0.11.0"
+tonic = { version = "0.11.0", features = ["tls", "tls-webpki-roots"] }
 log = "0.4.21"
 rand = "0.8.5"
 serde = { version = "1.0.197", features = ["derive"] }
