--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,7 +10,6 @@ edition.workspace = true
 anyhow.workspace = true
 bytes.workspace = true
 chrono.workspace = true
-fern.workspace = true
 prost.workspace = true
 tokio.workspace = true
 tonic.workspace = true
@@ -22,6 +21,7 @@ zip = "0.6.6"
 sha2 = "0.10.8"
 hex = "0.4.3"
 aes-gcm = "0.10.3"
+fern = { version = "0.6.2", features = ["colored", "date-based"] }
 
 [build-dependencies]
 tonic-build = "0.11.0"
