[App] Commit something

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ members = [
 ]
 
 [workspace.package]
-authors = ["Yunis Du"]
+authors = ["Yunis Du <yunis@88.com>"]
+license = "MIT"
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/yunis-du/flash-cat"
 
 [workspace.dependencies]
 flash_cat_app = { version = "0.1.0", path = "app" }
