--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -31,4 +31,4 @@ open = "5.3.0"
 toml = "0.8.19"
 
 [build-dependencies]
-built = { version = "0.7.4", features = ["chrono", "git2"] }
+built.workspace = true
