--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
 authors = ["Yunis Du <yunis@88.com>"]
 license = "MIT"
 version = "1.1.0"
+description= "Securely send the file folder from one computer to another computer."
 edition = "2021"
 repository = "https://github.com/yunis-du/flash-cat"
 rust-version = "1.80"
@@ -21,20 +22,20 @@ flash_cat_common = { version = "1.1.0", path = "common" }
 flash_cat_core = { version = "1.1.0", path = "core" }
 flash_cat_relay = { version = "1.1.0", path = "relay" }
 
-anyhow = "1.0.80"
-async-channel = "2.2.0"
-async-stream = "0.3.5"
+anyhow = "1"
+async-channel = "2"
+async-stream = "0.3"
 built = { version = "0.7.4", features = ["chrono", "git2"] }
-bytes = { version = "1.5.0", features = ["serde"] }
-clap = { version = "4.5.1", features = ["derive", "env"] }
+bytes = { version = "1", features = ["serde"] }
+clap = { version = "4.5", features = ["derive", "env"] }
 chrono = "0.4.35"
-dashmap = "5.5.3"
-indicatif = "0.17.8"
-prost = "0.12.3"
-parking_lot = "0.12.1"
-tokio = { version = "1.36.0", features = ["full"] }
-tokio-stream = { version = "0.1.14", features = ["sync"] }
-tonic = { version = "0.11.0", features = ["tls", "tls-webpki-roots"] }
-log = "0.4.21"
+dashmap = "6"
+indicatif = "0.17"
+prost = "0"
+parking_lot = "0.12"
+tokio = { version = "1", features = ["full"] }
+tokio-stream = { version = "0.1", features = ["sync"] }
+tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }
+log = "0.4"
 rand = "0.8.5"
-serde = { version = "1.0.197", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
