--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "flash_cat_cli"
+version = "1.1.1"
 authors.workspace = true
 license.workspace = true
-version.workspace = true
 description.workspace = true
 edition.workspace = true
 repository.workspace = true
