--- a/relay/Cargo.toml
+++ b/relay/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "flash_cat_relay"
+version = "1.1.0"
 authors.workspace = true
 license.workspace = true
-version.workspace = true
 edition.workspace = true
 repository.workspace = true
 rust-version.workspace = true
