Upgrade all components to version 2.0.0. Enhance client type handling in the core logic. Add new protocol buffer definitions for client type and relay info. Implement version comparison for client updates. Improve relay service functionality.comparison for client updates. Improve relay service functionality.

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "flash_cat_app"
-version = "1.1.2"
+version.workspace = true
 authors.workspace = true
 license.workspace = true
 description.workspace = true
