--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,16 +11,16 @@ members = [
 [workspace.package]
 authors = ["Yunis Du <yunis@88.com>"]
 license = "MIT"
-version = "1.1.2"
+version = "2.0.0"
 description= "Securely send the file folder from one computer to another computer."
 edition = "2021"
 repository = "https://github.com/yunis-du/flash-cat"
 rust-version = "1.80"
 
 [workspace.dependencies]
-flash_cat_common = { version = "1.1.1", path = "common" }
-flash_cat_core = { version = "1.1.1", path = "core" }
-flash_cat_relay = { version = "1.1.0", path = "relay" }
+flash_cat_common = {path = "common" }
+flash_cat_core = {path = "core" }
+flash_cat_relay = {path = "relay" }
 
 anyhow = "1"
 async-channel = "2"
