--- a/relay/Cargo.toml
+++ b/relay/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "flash_cat_relay"
-version = "1.1.0"
+version.workspace = true
 authors.workspace = true
 license.workspace = true
 edition.workspace = true
