Update dependencies and versioning across the project; refactor CLI to include relay functionality and improve version handling.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -17,11 +17,13 @@ path="src/main.rs"
 [dependencies]
 flash_cat_common = { workspace = true, features = ["progress"] }
 flash_cat_core.workspace = true
+flash_cat_relay.workspace = true
 
 anyhow.workspace = true
 bytes.workspace = true
 clap.workspace = true
 dashmap.workspace = true
+log.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
 indicatif.workspace = true
