--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ built = { version = "0.7.4", features = ["chrono", "git2"] }
 bytes = { version = "1", features = ["serde"] }
 clap = { version = "4.5", features = ["derive", "env"] }
 chrono = "0.4.35"
+confy = "0.6"
 dashmap = "6"
 indicatif = "0.17"
 prost = "0"
