--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -15,21 +15,20 @@ name="flash-cat-app"
 path="src/main.rs"
 
 [dependencies]
+anyhow.workspace = true
+confy.workspace = true
 flash_cat_common.workspace = true
 flash_cat_core.workspace = true
-
-anyhow.workspace = true
-serde.workspace = true
-log.workspace = true
-tokio.workspace = true
 indicatif.workspace = true
+log.workspace = true
+serde.workspace = true
+tokio.workspace = true
+directories = "6.0"
 iced = { version = "0.13", features = ["image", "svg", "tokio", "wgpu"] }
 iced_aw = "0.11"
-webbrowser = "1"
-rfd = "0.15"
-directories = "6.0"
 open = "5.3.0"
-toml = "0.8.19"
+rfd = "0.15"
+webbrowser = "1"
 
 [build-dependencies]
 built.workspace = true
