--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,18 +25,21 @@ flash_cat_relay = {path = "relay" }
 anyhow = "1"
 async-channel = "2"
 async-stream = "0.3"
-built = { version = "0.7.4", features = ["chrono", "git2"] }
+built = { version = "0.8", features = ["chrono", "git2"] }
 bytes = { version = "1", features = ["serde"] }
-clap = { version = "4.5", features = ["derive", "env"] }
 chrono = "0.4.35"
-confy = "0.6"
+clap = { version = "4.5", features = ["derive", "env"] }
+confy = "1.0"
 dashmap = "6"
 indicatif = "0.17"
-prost = "0"
+log = "0.4"
 parking_lot = "0.12"
+prost = "0"
+rand = "0.9"
+rustls = "0.23"
+serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
-tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }
-log = "0.4"
-rand = "0.9"
-serde = { version = "1.0", features = ["derive"] }
+tonic = { version = "0.13", features = ["tls-webpki-roots"] }
+tonic-build = "0.13"
+tonic-reflection = "0.13"
