--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -18,14 +18,14 @@ log.workspace = true
 rand.workspace = true
 indicatif.workspace = true
 walkdir = "2.5.0"
-zip = "2.2"
+zip = "3.0"
 sha2 = "0.10.8"
 hex = "0.4.3"
 aes-gcm = "0.10.3"
 fern = { version = "0.7", features = ["colored", "date-based"] }
 
 [build-dependencies]
-tonic-build = "0.12"
+tonic-build.workspace = true
 
 [features]
 progress = []
