feat(cli): add a self-update function to allow applications to update by themselves.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,4 @@ tokio-stream = { version = "0.1", features = ["sync"] }
 tonic = { version = "0.13", features = ["tls-ring", "tls-webpki-roots"] }
 tonic-build = "0.13"
 tonic-reflection = "0.13"
+zip = "6.0.0"
