feat: configure the icon of the NSIS installation program

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -76,6 +76,7 @@ timestamp-url = "http://timestamp.digicert.com"
 # Windows NSIS installer config
 [package.metadata.packager.nsis]
 compression = "lzma"
+installer-icon = "assets/logos/icons/icon.ico"
 
 # Windows resource config
 [package.metadata.winres]
