--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -28,7 +28,7 @@ tokio.workspace = true
 tokio-stream.workspace = true
 indicatif.workspace = true
 zip.workspace = true
-reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
+reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
 flate2 = "1.1.5"
 tar = "0.4.44"
 
