--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,10 +13,10 @@ env:
 
 jobs:
   # ====================
-  # CLI - Linux (Native Build)
+  # Linux
   # ====================
-  build-cli-linux:
-    name: CLI - Linux ${{ matrix.arch }}
+  build-linux:
+    name: Linux - ${{ matrix.arch }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -24,20 +24,89 @@ jobs:
         include:
           - target: x86_64-unknown-linux-musl
             arch: x86_64
+            deb_arch: amd64
           - target: aarch64-unknown-linux-musl
             arch: aarch64
+            deb_arch: arm64
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install musl tools
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
+
+      - name: Install cargo tools
         run: |
-          sudo apt-get update
-          sudo apt-get install -y musl-tools
-          if [ "${{ matrix.arch }}" = "aarch64" ]; then
-            sudo apt-get install -y gcc-aarch64-linux-gnu
-          fi
+          cargo install cross --git https://github.com/cross-rs/cross
+          cargo install cargo-deb cargo-generate-rpm
+
+      - name: Setup cross config
+        run: |
+          cat > Cross.toml <<'EOF'
+          [target.x86_64-unknown-linux-musl]
+          pre-build = ["apt-get update && apt-get install -y protobuf-compiler"]
+
+          [target.aarch64-unknown-linux-musl]
+          pre-build = ["apt-get update && apt-get install -y protobuf-compiler"]
+          EOF
+
+      - name: Build CLI
+        run: cross build --release -p flash_cat_cli --target ${{ matrix.target }}
+
+      - name: Build deb package
+        run: cargo deb -p flash_cat_cli --no-build --variant ${{ matrix.target }} --target ${{ matrix.target }}
+
+      - name: Build rpm package
+        run: cargo generate-rpm -p cli --variant ${{ matrix.target }} --target ${{ matrix.target }}
+
+      - name: Get version
+        id: version
+        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+
+      - name: Package CLI
+        run: |
+          cd target/${{ matrix.target }}/release
+          tar -czvf ../../../flash-cat-cli-linux-${{ steps.version.outputs.version }}-${{ matrix.arch }}.tar.gz flash-cat
+
+      - name: Upload CLI artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: cli-linux-${{ matrix.arch }}
+          path: flash-cat-cli-*.tar.gz
+
+      - name: Upload deb artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: deb-${{ matrix.deb_arch }}
+          path: target/${{ matrix.target }}/debian/*.deb
+
+      - name: Upload rpm artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: rpm-${{ matrix.arch }}
+          path: target/${{ matrix.target }}/generate-rpm/*.rpm
+
+  # ====================
+  # macOS
+  # ====================
+  build-macos:
+    name: macOS - ${{ matrix.arch }}
+    runs-on: macos-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - target: x86_64-apple-darwin
+            arch: x86_64
+          - target: aarch64-apple-darwin
+            arch: aarch64
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
@@ -49,31 +118,44 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Install cargo-packager
+        run: cargo install cargo-packager --locked
+
       - name: Build CLI
         run: cargo build --release -p flash_cat_cli --target ${{ matrix.target }}
-        env:
-          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER: aarch64-linux-gnu-gcc
+
+      - name: Build APP
+        run: cargo build --release -p flash_cat_app --target ${{ matrix.target }}
+
+      - name: Package APP
+        run: cargo packager --release -p flash_cat_app --target ${{ matrix.target }} --formats dmg
 
       - name: Get version
         id: version
         run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
 
-      - name: Package
+      - name: Package CLI
         run: |
           cd target/${{ matrix.target }}/release
-          tar -czvf ../../../flash-cat-cli-linux-${{ steps.version.outputs.version }}-${{ matrix.arch }}.tar.gz flash-cat
+          tar -czvf ../../../flash-cat-cli-macos-${{ steps.version.outputs.version }}-${{ matrix.arch }}.tar.gz flash-cat
 
-      - name: Upload artifact
+      - name: Upload CLI artifact
         uses: actions/upload-artifact@v4
         with:
-          name: cli-linux-${{ matrix.arch }}
+          name: cli-macos-${{ matrix.arch }}
           path: flash-cat-cli-*.tar.gz
 
+      - name: Upload APP artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-macos-${{ matrix.arch }}
+          path: target/${{ matrix.target }}/release/*.dmg
+
   # ====================
-  # CLI - Windows (Native Build)
+  # Windows
   # ====================
-  build-cli-windows:
-    name: CLI - Windows ${{ matrix.arch }}
+  build-windows:
+    name: Windows - ${{ matrix.arch }}
     runs-on: windows-latest
     strategy:
       fail-fast: false
@@ -98,227 +180,55 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Install cargo-packager
+        if: matrix.arch == 'x86_64'
+        run: cargo install cargo-packager --locked
+
+      - name: Install NSIS
+        if: matrix.arch == 'x86_64'
+        run: choco install nsis -y
+
       - name: Build CLI
         run: cargo build --release -p flash_cat_cli --target ${{ matrix.target }}
+
+      - name: Build APP
+        if: matrix.arch == 'x86_64'
+        run: cargo build --release -p flash_cat_app --target ${{ matrix.target }}
+
+      - name: Package APP
+        if: matrix.arch == 'x86_64'
+        run: cargo packager --release -p flash_cat_app --target ${{ matrix.target }} --formats nsis
 
       - name: Get version
         id: version
         shell: bash
         run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
 
-      - name: Package
+      - name: Package CLI
         shell: pwsh
         run: |
           cd target/${{ matrix.target }}/release
           Compress-Archive -Path flash-cat.exe -DestinationPath ../../../flash-cat-cli-windows-${{ steps.version.outputs.version }}-${{ matrix.arch }}.zip
 
-      - name: Upload artifact
+      - name: Upload CLI artifact
         uses: actions/upload-artifact@v4
         with:
           name: cli-windows-${{ matrix.arch }}
           path: flash-cat-cli-*.zip
 
-  # ====================
-  # CLI - macOS (Native Build)
-  # ====================
-  build-cli-macos:
-    name: CLI - macOS ${{ matrix.arch }}
-    runs-on: macos-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - target: x86_64-apple-darwin
-            arch: x86_64
-          - target: aarch64-apple-darwin
-            arch: aarch64
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
-
-      - name: Install protoc
-        uses: arduino/setup-protoc@v3
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build CLI
-        run: cargo build --release -p flash_cat_cli --target ${{ matrix.target }}
-
-      - name: Get version
-        id: version
-        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
-      - name: Package
-        run: |
-          cd target/${{ matrix.target }}/release
-          tar -czvf ../../../flash-cat-cli-macos-${{ steps.version.outputs.version }}-${{ matrix.arch }}.tar.gz flash-cat
-
-      - name: Upload artifact
+      - name: Upload APP artifact
+        if: matrix.arch == 'x86_64'
         uses: actions/upload-artifact@v4
         with:
-          name: cli-macos-${{ matrix.arch }}
-          path: flash-cat-cli-*.tar.gz
-
-  # ====================
-  # Linux Packages (deb/rpm)
-  # ====================
-  build-packages:
-    name: Packages - ${{ matrix.arch }}
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - target: x86_64-unknown-linux-musl
-            arch: x86_64
-            deb_arch: amd64
-          - target: aarch64-unknown-linux-musl
-            arch: aarch64
-            deb_arch: arm64
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install musl tools
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y musl-tools
-          if [ "${{ matrix.arch }}" = "aarch64" ]; then
-            sudo apt-get install -y gcc-aarch64-linux-gnu
-          fi
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
-
-      - name: Install protoc
-        uses: arduino/setup-protoc@v3
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Install cargo tools
-        run: cargo install cargo-deb cargo-generate-rpm
-
-      - name: Build binary
-        run: cargo build --release -p flash_cat_cli --target ${{ matrix.target }}
-        env:
-          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER: aarch64-linux-gnu-gcc
-
-      - name: Build deb package
-        run: cargo deb -p flash_cat_cli --no-build --variant ${{ matrix.target }} --target ${{ matrix.target }}
-
-      - name: Build rpm package
-        run: cargo generate-rpm -p cli --variant ${{ matrix.target }} --target ${{ matrix.target }}
-
-      - name: Upload deb artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: deb-${{ matrix.deb_arch }}
-          path: target/${{ matrix.target }}/debian/*.deb
-
-      - name: Upload rpm artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: rpm-${{ matrix.arch }}
-          path: target/${{ matrix.target }}/generate-rpm/*.rpm
-
-  # ====================
-  # macOS APP (Native Build)
-  # ====================
-  build-app-macos:
-    name: APP - macOS ${{ matrix.arch }}
-    runs-on: macos-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - target: x86_64-apple-darwin
-            arch: x86_64
-          - target: aarch64-apple-darwin
-            arch: aarch64
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
-
-      - name: Install protoc
-        uses: arduino/setup-protoc@v3
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Install cargo-packager
-        run: cargo install cargo-packager --locked
-
-      - name: Build APP
-        run: cargo build --release -p flash_cat_app --target ${{ matrix.target }}
-
-      - name: Package APP
-        run: cargo packager --release -p flash_cat_app --target ${{ matrix.target }} --formats dmg
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-macos-${{ matrix.arch }}
-          path: target/${{ matrix.target }}/release/*.dmg
-
-  # ====================
-  # Windows APP (Native Build)
-  # ====================
-  build-app-windows:
-    name: APP - Windows
-    runs-on: windows-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: x86_64-pc-windows-msvc
-
-      - name: Install protoc
-        uses: arduino/setup-protoc@v3
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Install cargo-packager
-        run: cargo install cargo-packager --locked
-
-      - name: Install NSIS
-        run: choco install nsis -y
-
-      - name: Build APP
-        run: cargo build --release -p flash_cat_app --target x86_64-pc-windows-msvc
-
-      - name: Package APP
-        run: cargo packager --release -p flash_cat_app --target x86_64-pc-windows-msvc --formats nsis
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-windows-x86_64
-          path: target/x86_64-pc-windows-msvc/release/*.exe
+          name: app-windows-${{ matrix.arch }}
+          path: target/${{ matrix.target }}/release/*.exe
 
   # ====================
   # Create Release
   # ====================
   release:
     name: Create Release
-    needs: [build-cli-linux, build-cli-windows, build-cli-macos, build-packages, build-app-macos, build-app-windows]
+    needs: [build-linux, build-macos, build-windows]
     runs-on: ubuntu-latest
 
     steps:
